corrigiendo imagenes y agregando enlace pages

--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -6,6 +6,8 @@ body {
 
 a {
   color: rgb(29, 138, 247);
+  font-family: 'Caveat', cursive;
+font-family: 'Pixelify Sans', sans-serif;
 }
 
 a:hover {
