--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -7,7 +7,8 @@ body {
 a {
   color: rgb(29, 138, 247);
   font-family: 'Caveat', cursive;
-font-family: 'Pixelify Sans', sans-serif;
+  font-family: 'Gloria Hallelujah', cursive;
+
 }
 
 a:hover {
